--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "todolist",
+  "homepage": "https://konflex.github.io/react-todolist-client/",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack serve --config webpack.config.js"
+    "build": "echo 'Building webpack dist folder' && rm -rf dist && webpack --mode production --env production",
+    "dev": "webpack serve --config webpack.config.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +21,7 @@
     "babel-loader": "^8.2.2",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^6.4.0",
+    "gh-pages": "^4.0.0",
     "html-webpack-plugin": "^5.4.0",
     "style-loader": "^3.3.0",
     "webpack": "^5.58.2",
