--- a/package.json
+++ b/package.json
@@ -18,20 +18,32 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "babel-preset-react": "^6.24.1",
+    "bulma": "^0.9.4",
     "css-loader": "^6.4.0",
     "html-webpack-plugin": "^5.4.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "style-loader": "^3.3.0",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@iconicicons/react": "^1.5.0",
     "@loadable/component": "^5.15.0",
     "classnames": "^2.3.1",
     "dotenv": "^16.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "framer-motion": "^7.3.5",
+    "node-sass": "^7.0.1",
+    "rc-pagination": "^3.1.17",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^5.3.0",
+    "sass-loader": "^13.0.2",
     "uuid": "^8.3.2"
   }
 }
