--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "todolist",
+  "name": "konflx-todolist",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo 'Building webpack dist folder' && rm -rf dist && webpack",
+    "build": "echo 'Building webpack dist folder' && rm -rf dist && webpack --mode production --env production",
     "dev": "webpack serve --config webpack.config.js",
     "testDev": "webpack-dev-server --https"
   },
@@ -24,7 +24,7 @@
     "mini-css-extract-plugin": "^2.6.1",
     "style-loader": "^3.3.0",
     "webpack": "^5.58.2",
-    "webpack-cli": "^4.9.0",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
