--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo 'Building webpack dist folder' && rm -rf dist && npm i -D webpack-cli webpack && webpack --mode production --env production",
+    "build": "echo 'Building webpack dist folder' && rm -rf dist  && webpack --mode production --env production",
     "dev": "webpack serve --config webpack.config.js",
     "testDev": "webpack-dev-server --https"
   },
@@ -22,8 +22,10 @@
     "css-loader": "^6.4.0",
     "html-webpack-plugin": "^5.4.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "sass": "^1.56.0",
+    "sass-loader": "^13.1.0",
     "style-loader": "^3.3.0",
-    "webpack": "^5.58.2",
+    "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.3.1"
   },
@@ -42,7 +44,6 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^5.3.0",
-    "sass-loader": "^13.0.2",
     "uuid": "^8.3.2"
   }
 }
