--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "sass": "^1.56.0",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.0",
-    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
@@ -44,6 +43,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^5.3.0",
     "uuid": "^8.3.2",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
