--- a/package.json
+++ b/package.json
@@ -12,21 +12,18 @@
   "keywords": [],
   "author": "konflex",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "babel-loader": "^8.2.2",
-    "babel-preset-react": "^6.24.1",
-    "webpack-dev-server": "^4.3.1"
-  },
   "dependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@iconicicons/react": "^1.5.0",
     "@loadable/component": "^5.15.0",
+    "babel-loader": "^9.1.0",
+    "babel-preset-react": "^6.24.1",
     "classnames": "^2.3.1",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.0",
@@ -43,6 +40,7 @@
     "style-loader": "^3.3.1",
     "uuid": "^8.3.2",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
