--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ls && echo 'Remove dist and build' && rm -rf dist && webpack --mode production --env production",
+    "build": "echo 'Remove dist and build' && rm -rf dist && webpack",
     "dev": "webpack serve --config webpack.config.js",
     "testDev": "webpack-dev-server --https"
   },
@@ -13,32 +13,34 @@
   "author": "konflex",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.20.2",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-react": "^7.18.6",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@iconicicons/react": "^1.5.0",
     "@loadable/component": "^5.15.0",
-    "babel-loader": "^9.1.0",
-    "babel-preset-react": "^6.24.1",
     "classnames": "^2.3.1",
-    "css-loader": "^6.7.1",
     "dotenv": "^16.0.0",
     "framer-motion": "^7.3.5",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.1",
     "rc-pagination": "^3.1.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^5.3.0",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "sass": "^1.56.0",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
-    "uuid": "^8.3.2",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
